# coffeeshop

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build_and_emulate.sh  build_and_run.sh  build_clean_move.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  repo_format.md
.github/workflows/: build-check.yml  release.yml  test.yml
meta/: config.json  meta.xml
meta/fonts/: config.json
src/: main.cpp
src/app/: App.cpp  App.h  CacheManager.cpp  CacheManager.h  Config.cpp  Config.h  Input.h  Paths.cpp  Paths.h
src/audio/: AudioManager.cpp  AudioManager.h
src/mods/: ConflictChecker.cpp  ConflictChecker.h  InstallChecker.cpp  InstallChecker.h  InstallHelper.cpp  InstallHelper.h  InstalledScanner.cpp  InstalledScanner.h  ZipExtractor.cpp  ZipExtractor.h
src/net/: DownloadManager.cpp  DownloadManager.h  DownloadQueue.cpp  DownloadQueue.h  HttpClient.cpp  HttpClient.h  RepoManager.cpp  RepoManager.h
src/ui/: BrowseScreen.cpp  BrowseScreen.h  DetailScreen.cpp  DetailScreen.h  DownloadQueueScreen.cpp  DownloadQueueScreen.h  DownloadScreen.cpp  DownloadScreen.h  MainLayout.cpp  MainLayout.h  MainMenuScreen.cpp  MainMenuScreen.h  RegionSelectScreen.cpp  RegionSelectScreen.h  Screen.h  SettingsScreen.cpp  SettingsScreen.h
src/util/: ImageCache.cpp  ImageCache.h  Logger.h  ScreenLog.h
tests/: CMakeLists.txt  stubs.cpp  test_conflict_checker.cpp  test_install_checker.cpp  test_mod_id_validation.cpp  test_repo_manager.cpp  test_url_resolver.cpp
